# llm-ida

./: .gitignore  README.md  demo_tslearn_results.npz  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  sitecustomize.py
.github/workflows/: ci.yml
app/: __init__.py  llm.py  main.py  model_runner.py  model_selector.py  runner_service.py  vector_db.py
llm_ida.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: demo_experiments.ipynb  demo_in.json  demo_in.npz  demo_local_run.ipynb  demo_tslearn_report.html  demo_tslearn_results.npz  run_service_demo.ipynb
notebooks/outputs/: metrics.json  runner_demo_summary.json
outputs/: metrics.json  runner_demo_summary.json
scripts/: _run_demo.py  build_vector_db.py  ddmin_find_crash.py  find_crash_subset.py  run_tests_isolated.py  split_and_run_tests.py
tests/: __init__.py  test_cli_guard.py  test_forward_model_args.py  test_llm.py  test_make_forecaster_default_docs.py  test_model_args_applied.py  test_model_runner_more.py  test_model_runner_sktime.py  test_pysteps_adapter.py  test_rag.py  test_run_model_integration.py  test_run_service_fallbacks.py  test_run_service_wrapper.py  test_runners_no_nan.py  test_select_and_predict.py  test_torch_geometric.py  test_torch_geometric_adapter.py  test_torch_geometric_gcn.py  test_torch_geometric_gcn_mocks.py  test_tslearn_adapter.py  test_tslearn_knn.py  test_vector_db_and_llm_call.py  test_vector_db_backend.py  test_vector_db_embeds.py  test_vector_db_more.py  test_vector_db_seed.py
tests/integration/: test_db_integration.py
tests/llm/: test_llm.py
(+17 files in other folders)
